增加拼图小游戏

--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="view_title_flowRadioGroup">FlowRadioGroup</string>
     <string name="view_introduction_flowRadioGroup">动态RadioButton</string>
 
+    <string name="view_title_puzzleView">PuzzleView</string>
+    <string name="view_introduction_puzzleView">拼图（可选难易度）</string>
+
 </resources>
