--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
 
     <string name="view_title_badgeView">BadgeView</string>
     <string name="view_introduction_badgeView">图标信息提示功能</string>
+
+    <string name="view_title_circleImageView">CircleImageView</string>
+    <string name="view_introduction_circleImageView">圆形ImageView</string>
 </resources>
